fix front docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,19 +14,19 @@ services:
       - PORT=8080
     ports:
       - 8080:8080  
-  # nextjs:
-  #   build: 
-  #     context: front-end
-  #     dockerfile: Dockerfile
-  #   restart: always   
-  #   ports:
-  #     - 3000:3000
-  #   volumes:
-  #     - ./front-end:/app
-  #     - /app/node_modules
-  #     - /app/.next
-  #   env_file:
-  #     - .env
+  nextjs:
+    build: 
+      context: front-end
+      dockerfile: Dockerfile
+    restart: always   
+    ports:
+      - 3000:3000
+    volumes:
+      - ./front-end:/app
+      - /app/node_modules
+      - /app/.next
+    env_file:
+      - .env
   mongodb:
     image: mongo:latest
     volumes:
