--- a/back-end/package.json
+++ b/back-end/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mongoose": "^9.1.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
+    "@nestjs/platform-socket.io": "^8.4.5",
+    "@nestjs/websockets": "^8.4.5",
     "@types/bcrypt": "^5.0.0",
     "@types/express-session": "^1.17.4",
     "bcrypt": "^5.0.1",
@@ -36,7 +38,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
