--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - 8080:8080  
     volumes:
       - ./back-end:/app
-      - /app/node_modules
+      # - /app/node_modules
   # nextjs:
   #   build: 
   #     context: front-end
