--- a/back-end/package.json
+++ b/back-end/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^8.4.5",
     "@nestjs/core": "^8.4.5",
+    "@nestjs/event-emitter": "^1.1.1",
     "@nestjs/mongoose": "^9.1.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
