--- a/back-end/package.json
+++ b/back-end/package.json
@@ -28,10 +28,12 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
     "@nestjs/platform-socket.io": "^8.4.5",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/websockets": "^8.4.5",
     "@types/bcrypt": "^5.0.0",
     "@types/express-session": "^1.17.4",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.3.2",
